tests/reject/pkg/privacy_cross/secretlib/secretlib.ty
package secretlib

# `_scale` is package-private. `pub` (public) may call it from inside the
# package; an importer may not (see ../main.ty).
fn _scale(x: int, k: int) -> int:
    return x * k

fn pub(x: int) -> int:
    return _scale(x, 2)
